Centered marvel frame

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 
 -----------------------------------------------------------------------------------*/
 
+.center-block {float: none !important}
 
 dl, dt, dd, ol, ul, li {
 	margin: 0;
